--- a/Admin/src/main/vue/components/Dockerfile
+++ b/Admin/src/main/vue/components/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:latest
 LABEL authors="Thong Ngo"
 
 ENTRYPOINT ["top", "-b"]
-FROM node:node:20.11.0 AS build
+FROM node:20.11.0 AS build
 
 WORKDIR /app
 
